update to java 17 preview & use pattern matching switch // inherit methods and fields // better validation for different type kinds